--- a/part3/backend/package.json
+++ b/part3/backend/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "mongoose": "^8.12.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@flydotio/dockerfile": "^0.7.8",
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
     "nodemon": "^3.1.9"
